WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73172
[Qt][WK2] MiniBrowser stops displaying content after surfing a few pages.
https://bugs.webkit.org/show_bug.cgi?id=73172
Summary
[Qt][WK2] MiniBrowser stops displaying content after surfing a few pages.
Zeno Albisser
Reported
2011-11-27 12:23:17 PST
While this is quite easy to reproduce by just clicking around on a few pages and using the forward backward buttons a few times, there seems not to be a direct and always working way to reproduce this.
Attachments
patch for review.
(1.61 KB, patch)
2011-11-27 12:45 PST
,
Zeno Albisser
kling
: review+
kling
: commit-queue-
Details
Formatted Diff
Diff
patch for review. - all structures in the same file.
(2.70 KB, patch)
2011-11-27 14:13 PST
,
Zeno Albisser
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zeno Albisser
Comment 1
2011-11-27 12:45:46 PST
Created
attachment 116677
[details]
patch for review.
Andreas Kling
Comment 2
2011-11-27 13:21:02 PST
Comment on
attachment 116677
[details]
patch for review. r=me
Andreas Kling
Comment 3
2011-11-27 13:25:20 PST
Comment on
attachment 116677
[details]
patch for review. You probably want to do this with the other structures in WebLayerTreeInfo.h as well.
Zeno Albisser
Comment 4
2011-11-27 14:13:54 PST
Created
attachment 116680
[details]
patch for review. - all structures in the same file.
Zeno Albisser
Comment 5
2011-11-27 16:13:06 PST
Comment on
attachment 116680
[details]
patch for review. - all structures in the same file. Clearing flags on attachment: 116680 Committed
r101216
: <
http://trac.webkit.org/changeset/101216
>
Zeno Albisser
Comment 6
2011-11-27 16:13:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug