[Qt][WK2] MiniBrowser stops displaying content after surfing a few pages. https://bugs.webkit.org/show_bug.cgi?id=73172

Properly initialize WebLayerTreeInfo structures.

Reviewed by Andreas Kling.

* Shared/WebLayerTreeInfo.h:
(WebKit::WebLayerUpdateInfo::WebLayerUpdateInfo):
(WebKit::WebLayerAnimation::WebLayerAnimation):
(WebKit::WebLayerInfo::WebLayerInfo):
(WebKit::WebLayerTreeInfo::WebLayerTreeInfo):

git-svn-id: svn://svn.chromium.org/blink/trunk@101216 bbb929c8-8fbe-4397-9dbb-9b2b20218538